--- a/docker/config/nginx/conf.d/walletphp.conf
+++ b/docker/config/nginx/conf.d/walletphp.conf
@@ -5,22 +5,27 @@
 #          # Add index.php to the list if you are using PHP
 #          index index.html index.htm index.nginx-debian.html index.php;
 #          charset utf-8;
-#          server_name zhangdetalk.com www.zhangdetalk.com;
+#          server_name walletphp.test ;
 
 #          location ~ \.md$ {
 #              default_type 'text/plain';
 #          }
 
-#          root /var/www/html/zhangdetalk_blog_admin;
+#          root /var/www/html/walletphp/public;
 
 #          location / {
 #                  #try_files $uri $uri/ =404;
-#                  index    index.php index.htm index.html;
+#                  try_files $uri $uri/ /index.php?$query_string; # 这一句是laravel部署必须的，将index.php隐藏掉
+#                 #  index    index.php index.htm index.html;
 #                  if (!-e $request_filename) {
 #                          rewrite  ^(.*)$  /index.php?s=$1  last;
 #                          break;
 #                  }
 #          }
+        
+
+#         # 将 [404] 错误交给 [/index.php] 处理，表示由 Laravel 渲染美观的错误页面。
+#         error_page 404 /index.php;
 
 #          location ~ \.php$ {
 #                  include fastcgi_params;
@@ -30,6 +35,13 @@
 
 #                  fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 #          }
+
+#         # 除符合正则表达式 [/\.(?!well-known).*] 之外的 URI，全部拒绝访问
+#         # 也就是说，拒绝公开以 [.] 开头的目录，[.well-known] 除外
+#         location ~ /\.(?!well-known).* {
+#                 deny all;
+#         }
+         
 #  }
 
 # #server {
@@ -65,49 +77,3 @@
 #         #}
 # #}
 
-
-server {
-         listen 80;
-         listen [::]:80;
-
-         # Add index.php to the list if you are using PHP
-         index index.html index.htm index.nginx-debian.html index.php;
-         charset utf-8;
-         server_name wallet.php.alex.test;
-
-         location ~ \.md$ {
-             default_type 'text/plain';
-         }
-
-         root /var/www/html/walletphp/public;
-
-         location / {
-                 #try_files $uri $uri/ =404;
-                 try_files $uri $uri/ /index.php?$query_string; # 这一句是laravel部署必须的，将index.php隐藏掉
-                #  index    index.php index.htm index.html;
-                 if (!-e $request_filename) {
-                         rewrite  ^(.*)$  /index.php?s=$1  last;
-                         break;
-                 }
-         }
-        
-
-        # 将 [404] 错误交给 [/index.php] 处理，表示由 Laravel 渲染美观的错误页面。
-        error_page 404 /index.php;
-
-         location ~ \.php$ {
-                 include fastcgi_params;
-                 fastcgi_index index.php;
-
-                 fastcgi_pass php7:9000;
-
-                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-         }
-
-        # 除符合正则表达式 [/\.(?!well-known).*] 之外的 URI，全部拒绝访问
-        # 也就是说，拒绝公开以 [.] 开头的目录，[.well-known] 除外
-        location ~ /\.(?!well-known).* {
-                deny all;
-        }
-         
- }
